--- a/client/src/app/components/Album.module.css
+++ b/client/src/app/components/Album.module.css
@@ -11,7 +11,6 @@
     margin-right: auto;
 }
 .albumCard img{
-    width: 250px;
-    height: 250px;
+    width: 80%;
     margin-bottom: 10px;
 }
