--- a/client/src/app/components/SearchBar.module.css
+++ b/client/src/app/components/SearchBar.module.css
@@ -43,7 +43,7 @@
     margin-top: 5px;
     margin-left: 25px;
 }
-@media screen and (max-width: 600px){
+@media screen and (max-width: 620px){
     .searchBar{
         width: 300px;
     }
